--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@ant-design/icons": "latest",
     "@redux-saga/core": "^1.1.3",
     "@reduxjs/toolkit": "^1.6.2",
+    "@tanstack/react-query": "^4.33.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
